# anvil

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  branded-screenshots.html  clipboard.html  control-panel.html  error.html  eslint.config.js  example-events.json  inbox-list.html  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  presentation.html  simple-task.html  spotlight.html  tailwind.config.js  task.html  tasks-panel.html  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts  vite.config.web.ts  vitest.config.ts  vitest.config.ui.ts  web.html
.claude/: settings.json
.claude/commands/: commit.md
agents/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
agents/src/: context.ts  git.ts  orchestration.test.ts  orchestration.ts  output.test.ts  output.ts  runner.ts  types.ts
api/: README.md  package.json  pnpm-lock.yaml  server.js
core/: index.ts  vitest.config.ts
core/lib/: index.ts  (+7 more)
docs/: agents.md  data-models.md  fly-redis.md  logs.md  testing.md
landing/: index.html  package-lock.json  package.json  tailwind.config.js
migrations/: package.json  pnpm-lock.yaml  tsconfig.json
plans/: add-terminal-and-watcher-managers.md  agent-analytics-drains.md  agent-event-debugger.md  approve-mode-improvements.md  archive-pagination.md  archive-plan-thread-edges.md  archive-threads-view.md  archive-virtualization.md  ask-question-hook-gate.md  auto-archive-setup-threads.md  auto-build-quick-actions.md  bash-sub-agent-spawning.md  bidirectional-task-navigation-plan.md  breadcrumb-improvements.md  breadcrumb-skill-loading-investigation.md  bring-your-own-api-key.md  budget-cap.md  buffered-event-gateway.md  bundled-skills-plugin.md  cancel-tool-call.md  category-aware-tab-placement.md  centralize-mru-worktree.md  claude-code-hook-injection.md  claude-code-skills-integration.md  claude-tui-content-pane.md  claude-tui-hook-bridge.md  cloudflare-pages-setup.md  cm6-file-editor.md  command-k-quick-actions.md  command-n-selected-thread-context.md  command-palette-file-search.md  compact-markdown-styling.md  consolidate-to-websocket-and-node-sidecar.md  context-meter.md  context-short-circuit-test.md  control-panel-navigation.md  control-panel-status-bar.md  cpu-profiling.md  create-new-project.md  decouple-tui-from-terminal-sessions.md  (+245 more)
redis/: Dockerfile  fly.toml  redis.conf
scripts/: SIGNING_SETUP.md  build-anvil.sh  build-mort.sh  dev-anvil.sh  dev-mort.sh  distribute.sh  e2e-server.sh  generate-tray-icon.sh  internal-build.sh  setup-worktree.sh  test-dev-build.sh  verify-web-build.sh
server/: Dockerfile  deployment.md  fly.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
sidecar/: package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
src/: App.tsx  clipboard-main.tsx  control-panel-main.tsx  error-main.tsx  inbox-list-main.tsx  index.css  main.tsx  simple-task-main.tsx  spotlight-main.tsx  task-main.tsx  tasks-panel-main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons-dev/: .gitkeep
src-tauri/src/: agent_hub.rs  app-search.rs  build_info.rs  cgevent_test.rs  clipboard.rs  clipboard_db.rs  config.rs  file_watcher.rs  filesystem.rs  git_commands.rs  icons.rs  identity.rs  lib.rs  logging.rs  logos  main.rs  menu.rs  mort_commands.rs  navigation_mode.rs  panels.rs  paths.rs  process_commands.rs  profiling.rs  repo_commands.rs  search.rs  shell.rs  task_navigation.rs  terminal.rs  thread_commands.rs  tray.rs  worktree_commands.rs
src-tauri/src/accessibility/: ax_element.rs  mod.rs  system_settings.rs  system_spotlight.rs
src-tauri/src/accessibility/reference_trees/: keyboard_settings_tree.txt  keyboard_shortcuts_tree.txt  spotlight_shortcuts_tree.txt
src-tauri/src/logging/: clickhouse.rs  config.rs  log_server.rs  mod.rs  sqlite_layer.rs  sqlite_worker.rs
src-tauri/src/logging/tests/: integration.rs
src-tauri/src/migrations/: _001_worktree_created_at.rs  mod.rs
src-tauri/src/ws_server/: dispatch.rs  dispatch_agent.rs  dispatch_fs.rs  dispatch_git.rs  dispatch_helpers.rs  dispatch_misc.rs  dispatch_worktree.rs  files.rs  mod.rs  push.rs  types.rs
test-diagnostics/: RESULTS.md
test-results/: .last-run.json
(+2692 files in other folders)
