[package]
name = "mort"
version = "0.0.44"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "mort"

[[bin]]
name = "mort-test"
path = "src/bin/mort-test/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mort_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools", "tray-icon", "image-png"] }
portable-pty = "0.8"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
arboard = "3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
plist = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
ureq = { version = "2", features = ["json"] }
fs2 = "0.4"
notify-debouncer-mini = "0.7"
shellexpand = "3.1"
clap = { version = "4", features = ["derive"] }
raw-window-handle = "0.6"
tracing-chrome = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSWindow",
  "NSApplication",
  "NSWorkspace",
  "NSImage",
  "NSBitmapImageRep",
  "NSGraphicsContext",
  "NSImageRep",
] }
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSData",
  "NSDictionary",
  "NSValue",
] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
pprof = { version = "0.14", features = ["flamegraph", "prost-codec"] }

[dev-dependencies]
tiny_http = "0.12"

[profile.release]
debug = 1  # Line tables for profiling symbol resolution
